# Ccomp-mlir

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  flow.sh  myc.bnf
.cache/clangd/index/: MyCFrontendMain.cpp.87E1449BF57CD7F2.idx  MyCFrontendVisitor.cpp.2576AF241A16F8BB.idx  MyCFrontendVisitor.h.3763A363ED057F76.idx  MyCastDialect.cpp.B7C281F6A8F7CB35.idx  MyCastDialect.h.DCAF443F9642C60A.idx  MyCastOps.cpp.9D988BA9F40175EC.idx  MyCastOps.h.85352B104B1810AF.idx  MyCastOpsTypes.cpp.B1CB12E9B01FB134.idx  MyCastOpsTypes.h.F4A6D1D7D29ADF50.idx  ccomp-opt.cpp.C592B1AFE5808362.idx  ccompLspServerMain.cpp.49E87974AB1F34A2.idx  initAllDialect.h.06A0E3F0E00B88FC.idx
antlr_src/: C.g4  MyC.g4
cmake/antlr/: antlr4-generator.cmake  antlr4-runtime.cmake
include/: myCutils.h
include/Dialect/: CMakeLists.txt  initAllDialect.h
include/Dialect/Cast/: CMakeLists.txt  CastDialect.h  CastDialect.td  CastOps.h  CastOps.td  CastOpsTypes.h  CastOpsTypes.td  CastTypes.h  CastTypes.td
include/Dialect/MyCast/: CMakeLists.txt  MyCastAttr.h  MyCastAttr.td  MyCastDialect.h  MyCastDialect.td  MyCastInterface.td  MyCastOps.h  MyCastOps.td  MyCastOpsTypes.h  MyCastOpsTypes.td
include/Dialect/MyCcdfg/: CMakeLists.txt  MyCcdfgDialect.h  MyCcdfgDialect.td  MyCcdfgOps.h  MyCcdfgOps.td  MyCcdfgOpsTypes.h  MyCcdfgOpsTypes.td
include/Transforms/: initAllPasses.h
include/Transforms/MyCast/: CMakeLists.txt  Passes.h  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/Cast/: CMakeLists.txt  CastDialect.cpp  CastOps.cpp  CastOpsTypes.cpp  CastTypes.cpp
lib/Dialect/MyCast/: CMakeLists.txt  MyCastAttr.cpp  MyCastDialect.cpp  MyCastOps.cpp  MyCastOpsTypes.cpp
lib/Dialect/MyCcdfg/: CMakeLists.txt  MyCcdfgDialect.cpp  MyCcdfgOps.cpp  MyCcdfgOpsTypes.cpp
lib/Transforms/MyCast/: CMakeLists.txt
lib/Transforms/MyCast/CheckDeclaredFun/: checkDeclaredFun.cpp
lib/Transforms/MyCast/CheckDefinedVar/: checkDefinedVar.cpp
lib/Transforms/MyCast/CompleteTypeAst/: completeTypeAst.cpp
lib/Transforms/MyCast/CompoundInliner/: compoundInliner.cpp
lib/Transforms/MyCast/FlattenCompound/: flattenCompound.cpp
lib/Transforms/MyCast/ForAndDoToWhile/: forAndDoToWhile.cpp
lib/Transforms/MyCast/PrettyPrintAst/: prettyPrintAst.cpp
lib/Transforms/MyCast/PropagateConst/: propagateConst.cpp
lib/Transforms/MyCast/PullUpVarDecls/: pullUpVarDecls.cpp
lib/Transforms/MyCast/ReplaceAlias/: replaceAlias.cpp
lib/Transforms/MyCast/ReplaceGeneric/: replaceGeneric.cpp
lib/Transforms/MyCast/TypeAst/: typeAst.cpp
lib/Transforms/MyCast/VariableUniquer/: variableUniquer.cpp
tests/MyC/: test.myC
tests/MyCast/: test1.mlir
tests/MyCcdfg/: test1.mlir
tools/: CMakeLists.txt
tools/ccomp-compiler/: CMakeLists.txt  MyC.g4  MyCFrontendVisitor.cpp  ccomp-compiler.cpp
tools/ccomp-lsp-server/: CMakeLists.txt  ccompLspServerMain.cpp
tools/ccomp-opt/: CMakeLists.txt  ccomp-opt.cpp
tools/frontend/: CMakeLists.txt  MyC.g4  MyCFrontendMain.cpp  MyCFrontendVisitor.cpp  MyCFrontendVisitor.h
